# ris-mcp

./: .gitignore  DATA_LICENSE  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: index.html  publishing-the-dataset.md  stats.json
docs/superpowers/plans/: 2026-04-15-ris-mcp-phase1.5-distribution.md  2026-04-15-ris-mcp-phase1.md
docs/superpowers/specs/: 2026-04-15-ris-mcp-phase1-design.md  2026-04-15-ris-mcp-phase1.5-distribution-design.md
src/ris_mcp/: applikation.py  cli.py  client.py  coverage.py  doctor.py  hf_import.py  ingest.py  ingest_bundesrecht.py  schema.sql  server.py  store.py
src/ris_mcp/migrations/: 001_backfill_organ_court.sql
src/ris_mcp/tools/: get_decision.py  get_law.py  search_decisions.py
tests/: conftest.py  test_applikation.py  test_cli.py  test_client.py  test_coverage.py  test_doctor.py  test_e2e_smoke.py  test_get_decision.py  test_get_law.py  test_hf_import.py  test_ingest.py  test_ingest_bundesrecht.py  test_search_decisions.py  test_store.py
tests/fixtures/: bundesrecht_search_page1.json  bvwg_search_page1.json  vfgh_search_page1.json
