[project]
name = "ris-mcp"
version = "0.2.1"
description = "MCP server for Austrian RIS (court decisions + federal law) backed by a local FTS5-indexed SQLite mirror"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Jonas Hertner", email = "jonashertner@protonmail.ch" }]
dependencies = [
  "httpx>=0.27",
  "pydantic>=2.7",
  "mcp>=1.2",
  "click>=8.1",
  "beautifulsoup4>=4.12",
  "lxml>=5.0",
  "huggingface_hub>=0.24",
]

[project.scripts]
ris-mcp = "ris_mcp.cli:mcp_main"
ris-ingest = "ris_mcp.cli:ingest_main"

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "respx>=0.21", "ruff>=0.6"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ris_mcp"]

[tool.hatch.build.targets.wheel.force-include]
"src/ris_mcp/schema.sql" = "ris_mcp/schema.sql"
"src/ris_mcp/migrations" = "ris_mcp/migrations"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
